<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:title="@string/title_pantry_list"
        android:titleTextColor="@android:color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPantry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />

        <TextView
            android:id="@+id/textEmptyPantry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="32dp"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorTextSecondary"
            android:text="@string/empty_pantry"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/buttonAddItem"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/title_add_edit"
            android:src="@drawable/ic_add" />

    </FrameLayout>

    <include
        android:id="@+id/navbarInclude"
        layout="@layout/navbar_include" />

</LinearLayout>
