<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:title="@string/title_settings"
        android:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/spacing_standard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_expiry_alerts"
                android:textSize="@dimen/text_size_medium" />

            <Switch
                android:id="@+id/switchExpiryAlerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_units_preference"
            android:textSize="@dimen/text_size_medium" />

        <RadioGroup
            android:id="@+id/radioGroupUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radioMetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Metric (g, ml, kg, l)" />

            <RadioButton
                android:id="@+id/radioCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pieces / count (pcs)" />

        </RadioGroup>

    </LinearLayout>

    <include
        android:id="@+id/navbarInclude"
        layout="@layout/navbar_include" />

</LinearLayout>
